--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -4,5 +4,6 @@
     margin: 1% auto;
     border: 1px solid blue;
     border-radius: 5px;
-    background-color: lightcoral
+    background-color: lightcoral;
+    font-size: 1.2rem;
 }
